design/css/design.css
/* -- Background -- */
body {

    background-image: url('../images/background.jpg');
	background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;

}

/* -- Some custom Bootstrap colors -- */
.bg-dark {

    color: #fff;

}

.bg-dark2 {
    
    background-color: rgb(57, 63, 69);
    color: #fff;
    
}

/* -- Spacing -- */
.spacer {
    
    height: 20vh;

    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;
    
}

.spacer2x {

    height: 40vh;

    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;

}

.main-container {
    
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 5%;
    padding-right: 5%;
    
}
    
.end-container {
    
    height: 20px;
    
}

/* -- Classes for text alginment -- */
.left {
    text-align: left;
}

.center {
    text-align: center;
}

.right {
    text-align: right;
}

/* Bootstrap Media Alignment and compatability with font-awesome */
.media.left i {

    margin-right: 20px;

}

.media.right .media-body {

    margin-right: 20px;

}

/* Card Design */
#products-container .card {
    
    position: relative;
    display: inline-block;
    vertical-align: top; 
    width: 200px;
    height: 320px;
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 20px;
    padding: 15px;

    background-color: rgba(0, 0, 0, 0.2);

}

#products-container .bottom {

    position: absolute;
    align-self: center;

    bottom: 20px;
    left: 50%;

}

#products-container .bottom .btn {

    position: relative;
    left: -50%;

}

/* -- Pagination -- */
.pagination {
    display: inline-flex;
}

.page-link {

    transition: background-color linear 80ms;
    background-color: rgba(0, 0, 0, 0.2);
    border: 1px solid rgba(0, 0, 0, 0.125);

    color: #fff;

}

.page-link:hover {

    transition: background-color linear 80ms;
    background-color: rgba(0, 0, 0, 0.4);
    border: 1px solid rgba(0, 0, 0, 0.125);

    color: #fff;

}

.page-link.active {

    background-color: rgba(0, 0, 0, 0.6);

}

/* -- Search Form -- */
.search-form {
    
    min-width: 200px;
    width: 25%;
    display: inline-block;
    vertical-align: top;
    margin-bottom: 10px;

}

.search-form .form-control {

    margin-right: 10px;
    min-width: 140px;
    width: 70%;
    display: inline-block;
    vertical-align: top;

    border: 1px solid #28a745;
    border-radius: 0.25rem;

}

.search-form .btn {

    width: 40px;
    vertical-align: top;

}

@media screen and (max-width: 600px) {
    
    .search-form-wpg {
        display: block;
    }
    
}

@media screen and (min-width: 600px) {

    .search-form-wpg {
        margin-right: 10%;
    }

}

/* -- Alerts -- */

.alert {

    display: inline-block;
    min-width: 200px;
    width: 50%;

}

.alert-danger {

    color: #D44D5D;
    border-color: #D44D5D;
    background-color: rgba(114, 28, 36, 0.2);

}

.alert-success {

    color: #30B44B;
    border-color: #30B44B;
    background-color: rgba(21, 87, 36, 0.2);

}

/* -- Forms -- */
.form-control {

    display: inline-block;
    width: 70%;

    margin-bottom: 1rem;

}

form {
    text-align: center;
}

form h4 {
    width: 70%;
    display: inline-block;
    margin-bottom: 2rem;
}

@media screen and (max-width: 600px) {
    
    .form-control-small {
        min-width: 200px;
        width: 70%;
    }

    .form-control {
        min-width: 200px;
    }
    
}

@media screen and (min-width: 600px) {

    .form-control {
        min-width: 440px;
    }

    .form-control-small.first {
        margin-right: 6%;
    }

    .form-control-small.second {
        margin-left: 0;
    }

    .form-control-small {
        min-width: 200px;
        width: 32%;
    }

}

/* Tables */
.table-parent {

    max-width: 90%;
    overflow-y: auto;
    display: inline-block;

}

th a i {
    margin-left: 10px;
}

th a
{
    color: #fff;
    text-decoration: none;
    white-space: nowrap;
}

th a:hover
{
    color: #fff;
    text-decoration: none;
}

/* Misc */

#orders-container {

    padding-top: 5vh;
    padding-bottom: 5vh;

    min-height: 20vh;
}

